[metadata]
name = type-serialize
description = Serialize with type annotations
version = attr: type_serialize.__version__
url = https://github.com/osom8979/type-serialize
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
project_urls =
    GitHub: issues = https://github.com/osom8979/type-serialize/issues
    GitHub: repo = https://github.com/osom8979/type-serialize
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
keywords =
    serialize
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8
packages = find:
tests_require =
    pytest

[options.extras_require]
full =
    numpy
    orjson
    msgpack

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    type_serialize = type_serialize.app.cli:main
